--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,81 +1,38 @@
-version: 2
-
+version: 2.1
+orbs: 
+  terraform: circleci/terraform@3.0.1
 jobs:
-  plan-apply:
-    working_directory: /tmp/project
-    docker:
-      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
+  single-job-lifecycle:
+    executor: terraform/default
     steps:
       - checkout
-      - run:
-          name: terraform init & plan
-          command: |
-            terraform init -input=false
-            terraform plan 
-      - persist_to_workspace:
-          root: .
-          paths:
-            - .
-
-  apply:
-    docker:
-      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
-    steps:
-      - attach_workspace:
-          at: .
-      - run:
-          name: terraform
-          command: |
-            terraform apply -auto-approve tfapply
-      - persist_to_workspace:
-          root: .
-          paths:
-            - .
-
-  plan-destroy:
-    docker:
-      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
-    steps:
-      - attach_workspace:
-          at: .
-      - run:
-          name: terraform create destroy plan
-          command: |
-            terraform plan -destroy
-      - persist_to_workspace:
-          root: .
-          paths:
-            - .
-
-  destroy:
-    docker:
-      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
-    steps:
-      - attach_workspace:
-          at: .
-      - run:
-          name: terraform destroy
-          command: |
-            terraform apply -auto-approve tfdestroy
+      # - run:
+      #     command: >-
+      #       echo "credentials \"app.terraform.io\" {token =
+      #       \"$TERRAFORM_TOKEN\"}" > $HOME/.terraformrc
+      #     name: Create .terraformrc file locally
+      - terraform/install:
+          arch: amd64
+          os: linux
+          terraform_version: 0.14.2
+      - terraform/fmt:
+          path: .
+      - terraform/validate:
+          path: .
+      - terraform/init:
+          backend: true
+          backend_config_file: testingtf.tfstate
+          path: .
+      - terraform/plan:
+          backend_config_file: testingtf.tfstate
+          path: .
+      - terraform/apply:
+          backend_config_file: testingtf.tfstate
+          path: .
+      - terraform/destroy:
+          path: .
+    working_directory: ~/Terraform
 workflows:
-  version: 2
-  plan_approve_apply:
+  single-job-lifecycle:
     jobs:
-      - plan-apply
-      - hold-apply:
-          type: approval
-          requires:
-            - plan-apply
-      - apply:
-          requires:
-            - hold-apply
-      - plan-destroy:
-          requires:
-            - apply
-      - hold-destroy:
-          type: approval
-          requires:
-            - plan-destroy
-      - destroy:
-          requires:
-            - hold-destroy
+      - single-job-lifecycle
