--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,38 +1,24 @@
+# https://circleci.com/developer/orbs/orb/circleci/terraform
 version: 2.1
-orbs: 
-  terraform: circleci/terraform@3.0.1
-jobs:
-  single-job-lifecycle:
-    executor: terraform/default
-    steps:
-      - checkout
-      # - run:
-      #     command: >-
-      #       echo "credentials \"app.terraform.io\" {token =
-      #       \"$TERRAFORM_TOKEN\"}" > $HOME/.terraformrc
-      #     name: Create .terraformrc file locally
-      - terraform/install:
-          arch: amd64
-          os: linux
-          terraform_version: 1.1.9
-      - terraform/fmt:
-          path: .
-      - terraform/validate:
-          path: .
-      - terraform/init:
-          backend: true
-          backend_config_file: testingtf.tfstate
-          path: .
-      - terraform/plan:
-          backend_config_file: testingtf.tfstate
-          path: .
-      - terraform/apply:
-          backend_config_file: testingtf.tfstate
-          path: .
-      - terraform/destroy:
-          path: .
-    working_directory: ~/Terraform
+orbs:
+  terraform: circleci/terraform@1.2.1
 workflows:
-  single-job-lifecycle:
+  deploy_infra:
     jobs:
-      - single-job-lifecycle
+    - terraform/validate:
+        checkout: true
+        context: terraform
+    - terraform/plan:
+        checkout: true
+        context: terraform
+        persist-workspace: true
+        requires:
+        - terraform/validate
+    - terraform/apply:
+        attach-workspace: true
+        context: terraform
+        filters:
+          branches:
+            only: trunk
+        requires:
+        - terraform/plan
