--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,24 +1,52 @@
-# https://circleci.com/developer/orbs/orb/circleci/terraform
 version: 2.1
-orbs:
-  terraform: circleci/terraform@1.2.1
+
+jobs:
+
+  init-plan:
+    docker: 
+      - image: hashicorp/terraform:light
+    working_directory: ~/Terraform
+    steps:
+      - checkout
+      - run:
+          name: terraform init plan fmt
+          command: |
+            terraform init
+            terraform fmt .
+            terraform plan
+  apply:
+    docker: 
+      - image: hashicorp/terraform:light
+    working_directory: ~/Terraform
+    steps:
+      - checkout
+      - run:
+           name: terraform apply
+           command: |
+            terraform apply -auto-approve
+  destroy:
+    docker: 
+      - image: hashicorp/terraform:light
+    working_directory: ~/Terraform
+    steps:
+      - checkout
+      - run:
+           name: terraform destroy
+           command: |
+            terraform destroy -auto-approve
+            
+
 workflows:
-  deploy_infra:
-    jobs:
-    - terraform/validate:
-        checkout: true
-        context: terraform
-    - terraform/plan:
-        checkout: true
-        context: terraform
-        persist-workspace: true
-        requires:
-        - terraform/validate
-    - terraform/apply:
-        attach-workspace: true
-        context: terraform
-        filters:
-          branches:
-            only: trunk
-        requires:
-        - terraform/plan
+    deploy:
+      jobs:
+        - init-plan
+        - hold apply:
+            type: approval
+            requires:
+              - apply
+
+    destroy:
+      jobs:
+        - destroy
+      
+
