--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,9 @@ workflows:
             type: approval
             requires:
               - apply
+        - apply:
+            requires:
+              - hold apply
 
     destroy:
       jobs:
