Josh - edit workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
   init-plan:
     docker: 
       - image: hashicorp/terraform:light
-    working_directory: .
+    working_directory: ~/terraform-sandbox
     steps:
       - checkout
       - run:
