--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - image: hashicorp/terraform:light   
     steps:
       - attach_workspace:
-          at: .
+          at: /terraform-sandbox/terraform
       - run:
           name: terraform init plan fmt
           command: |
@@ -20,7 +20,7 @@ jobs:
       - image: hashicorp/terraform:light 
     steps:
       - attach_workspace:
-          at: .
+          at: /terraform-sandbox/terraform
       - run:
            name: terraform apply
            command: |
@@ -30,7 +30,7 @@ jobs:
       - image: hashicorp/terraform:light
     steps:
       - attach_workspace:
-          at: .
+          at: /terraform-sandbox/terraform
       - run:
            name: terraform destroy
            command: |
@@ -48,6 +48,8 @@ workflows:
         - apply:
             requires:
               - hold
+    destroy:
+        jobs:
         - destroy:
             requires:
               - hold
