Josh - add terraform install job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,8 @@
 version: 2.1
 
 jobs:
-
   init-plan:
-    working_directory: ~/project/terraform
+    working_directory: /terraform-sandbox/terraform
     docker: 
       - image: hashicorp/terraform:light   
     steps:
@@ -17,7 +16,7 @@ jobs:
             terraform fmt .
             terraform plan
   apply:
-    working_directory: ~/project/terraform
+    working_directory: /terraform-sandbox/terraform
     docker: 
       - image: hashicorp/terraform:light 
     steps:
@@ -28,7 +27,7 @@ jobs:
            command: |
             terraform apply -auto-approve
   destroy:
-    working_directory: ~/project/terraform
+    working_directory: /terraform-sandbox/terraform
     docker: 
       - image: hashicorp/terraform:light
     steps:
@@ -38,11 +37,22 @@ jobs:
            name: terraform destroy
            command: |
             terraform destroy -auto-approve
-            
+
+set_terraform_environment: &set_terraform_environment
+  run:
+    name: set terraform environment
+    command: |
+      cd && touch $BASH_ENV
+      if [ "${CIRCLE_BRANCH}" == "master" ]; then
+        echo 'export TERRAFORM_ENVIRONMENT=production' >> $BASH_ENV
+      else
+        echo 'export TERRAFORM_ENVIRONMENT=staging' >> $BASH_ENV
+      fi
 
 workflows:
     deploy:
       jobs:
+        - set_terraform_environment
         - init-plan
         - hold:
             type: approval
