--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   init-plan:
     working_directory: ~/Terraform
     docker: 
-      - image: hashicorp/terraform:full   
+      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light  
     steps:
       - attach_workspace:
           at: .
@@ -17,7 +17,7 @@ jobs:
   apply:
     working_directory: ~/Terraform
     docker: 
-      - image: hashicorp/terraform:full 
+      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light 
     steps:
       - attach_workspace:
           at: .
@@ -28,7 +28,7 @@ jobs:
   destroy:
     working_directory: ~/Terraform
     docker: 
-      - image: hashicorp/terraform:full
+      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
     steps:
       - attach_workspace:
           at: .
