--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,136 +1,136 @@
-# version: 2.1
+version: 2.1
 
-# jobs:
-#   init-plan:
-#     working_directory: ~/Terraform
-#     docker: 
-#       - image: docker.mirror.hashicorp.services/hashicorp/terraform:light  
+jobs:
+  init-plan:
+    working_directory: ~/Terraform
+    docker: 
+      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light  
   
-#     steps:
-#       - attach_workspace:
-#           at: .
-#       - run:
-#           name: terraform init plan fmt
-#           command: |
-#             ls -al
-#             pwd
-#             terraform init
-#             terraform fmt .
-#             terraform plan
-#   apply:
-#     working_directory: ~/Terraform
-#     docker: 
-#       - image: docker.mirror.hashicorp.services/hashicorp/terraform:light 
-#     steps:
-#       - attach_workspace:
-#           at: .
-#       - run:
-#            name: terraform apply
-#            command: |
-#             terraform apply -auto-approve
-#   destroy:
-#     working_directory: ~/Terraform
-#     docker: 
-#       - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
-#     steps:
-#       - attach_workspace:
-#           at: .
-#       - run:
-#            name: terraform destroy
-#            command: |
-#             terraform destroy -auto-approve
+    steps:
+      - attach_workspace:
+          at: .
+      - run:
+          name: terraform init plan fmt
+          command: |
+            ls -al
+            pwd
+            terraform init -input=false
+            terraform fmt .
+            terraform plan -input=tfplan -input=false
+  apply:
+    working_directory: ~/Terraform
+    docker: 
+      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light 
+    steps:
+      - attach_workspace:
+          at: .
+      - run:
+           name: terraform apply
+           command: |
+            terraform apply -auto-approve
+  destroy:
+    working_directory: ~/Terraform
+    docker: 
+      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
+    steps:
+      - attach_workspace:
+          at: .
+      - run:
+           name: terraform destroy
+           command: |
+            terraform destroy -auto-approve
 
-# workflows:
-#     deploy:
-#       jobs:
-#         - init-plan
-#         - hold:
-#             type: approval
-#             requires:
-#               - init-plan
-#         - apply:
-#             requires:
-#               - hold
-#         - destroy:
-#             requires:
-#               - hold
+workflows:
+    deploy:
+      jobs:
+        - init-plan
+        - hold:
+            type: approval
+            requires:
+              - init-plan
+        - apply:
+            requires:
+              - hold
+        - destroy:
+            requires:
+              - hold
 
       
 
-version: 2
-jobs:
-  terraform-validate:
-    docker:
-      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
-    steps:
-      - checkout
-      - run:
-          name: Terraform Validate
-          command: |
-            terraform init
-            terraform validate
-  terraform-plan:
-    docker:
-      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
-    steps:
-      - checkout
-      - run:
-          name: Terraform Validate
-          command: |
-            terraform init
-            terraform plan
-  terraform-apply:
-    docker:
-      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
-    steps:
-      - checkout
-      - run:
-          name: Terraform Apply
-          command: |
-            terraform init
-            terraform apply -auto-approve
-      - persist_to_workspace:
-          root: /root
-          paths:
-            - Terraform
-  run-inspec-tests:
-    docker:
-      - image: docker.mirror.hashicorp.services/chef/inspec:latest
-    steps:
-      - attach_workspace:
-          at: ~/
-      - run:
-          name: Inspec Tests
-          command: |
-            inspec --version
-      - persist_to_workspace:
-          root: /root
-          paths:
-            - Terraform
-  terraform-destroy:
-    docker:
-      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
-    steps:
-      - attach_workspace:
-          at: ~/
-      - run:
-          name: Terraform Destroy
-          command: |
-            terraform destroy -auto-approve
-workflows:
-  version: 2
-  infrastructure-tests:
-    jobs:
-      - terraform-validate
-      - terraform-plan:
-          requires:
-            - terraform-validate
-      - terraform-apply:
-          requires:
-            - terraform-plan
-      - run-inspec-tests:
-          requires:
-            - terraform-apply
-      - terraform-destroy:
-          requires:
-            - run-inspec-tests
+# version: 2
+# jobs:
+#   terraform-validate:
+#     docker:
+#       - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
+#     steps:
+#       - checkout
+#       - run:
+#           name: Terraform Validate
+#           command: |
+#             terraform init
+#             terraform validate
+#   terraform-plan:
+#     docker:
+#       - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
+#     steps:
+#       - checkout
+#       - run:
+#           name: Terraform Validate
+#           command: |
+#             terraform init
+#             terraform plan
+#   terraform-apply:
+#     docker:
+#       - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
+#     steps:
+#       - checkout
+#       - run:
+#           name: Terraform Apply
+#           command: |
+#             terraform init
+#             terraform apply -auto-approve
+#       - persist_to_workspace:
+#           root: /root
+#           paths:
+#             - Terraform
+#   run-inspec-tests:
+#     docker:
+#       - image: docker.mirror.hashicorp.services/chef/inspec:latest
+#     steps:
+#       - attach_workspace:
+#           at: ~/
+#       - run:
+#           name: Inspec Tests
+#           command: |
+#             inspec --version
+#       - persist_to_workspace:
+#           root: /root
+#           paths:
+#             - Terraform
+#   terraform-destroy:
+#     docker:
+#       - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
+#     steps:
+#       - attach_workspace:
+#           at: ~/
+#       - run:
+#           name: Terraform Destroy
+#           command: |
+#             terraform destroy -auto-approve
+# workflows:
+#   version: 2
+#   infrastructure-tests:
+#     jobs:
+#       - terraform-validate
+#       - terraform-plan:
+#           requires:
+#             - terraform-validate
+#       - terraform-apply:
+#           requires:
+#             - terraform-plan
+#       - run-inspec-tests:
+#           requires:
+#             - terraform-apply
+#       - terraform-destroy:
+#           requires:
+#             - run-inspec-tests
