--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,21 @@
 version: 2.1
-
+executors:
+  docker-executor:
+    docker:
+      - image: cimg/python:3.9.6
 jobs:
   init-plan:
-    working_directory: /terraform
-    docker: 
-      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light  
+    working_directory: ~/terraform
+    executor: docker-executor 
   
     steps:
+      - run:
+          name: Install Terraform
+          command: |
+            sudo apt-get update && sudo apt-get install -y gnupg software-properties-common curl
+            curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
+            sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
+            sudo apt-get update && sudo apt-get install terraform
       - attach_workspace:
           at: .
       - run:
