Josh - add cd terraform to init-plan

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ jobs:
       - run:
           name: terraform init plan fmt
           command: |
+            cd terraform
             ls -al
             terraform init -input=false
             terraform fmt .
