--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ executors:
       - image: cimg/python:3.9.6
 jobs:
   init-plan:
-    working_directory: ~/project/Terraform
+    working_directory: ~/project/terraform
     executor: docker-executor 
     steps:
       - run:
@@ -20,7 +20,7 @@ jobs:
       - run:
           name: terraform init plan fmt
           command: |
-            cd Terraform
+            cd terraform
             terraform init -input=false
             terraform fmt .
             terraform plan -input=false
