Josh - add aws cli setup to init-plan job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,8 @@ jobs:
     executor: docker-executor 
     steps:
       - checkout
+      - aws-cli/setup:
+          profile-name: default
       - run:
           name: Install Terraform
           command: |
