--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,8 @@ jobs:
 workflows:
     deploy:
       jobs:
-        - init-plan
+        - init-plan:
+            context: AWScreds
         - hold:
             type: approval
             requires:
