--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,8 +35,7 @@ jobs:
             terraform plan -input=false
   apply:
     working_directory: /terraform
-    docker: 
-      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light 
+    executor: docker-executor 
     steps:
       - checkout
       - attach_workspace:
@@ -44,11 +43,11 @@ jobs:
       - run:
            name: terraform apply
            command: |
-            terraform apply -auto-approve
+            cd terraform
+            terraform apply
   destroy:
     working_directory: /terraform
-    docker: 
-      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
+    executor: docker-executor 
     steps:
       - checkout
       - attach_workspace:
@@ -56,6 +55,7 @@ jobs:
       - run:
            name: terraform destroy
            command: |
+            cd terraform
             terraform destroy -auto-approve
 
 workflows:
