--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,24 +38,30 @@ jobs:
     executor: docker-executor 
     steps:
       - checkout
+      - aws-cli/setup:
+          profile-name: default
       - attach_workspace:
           at: .
       - run:
            name: terraform apply
            command: |
             cd terraform
+            echo 2323
             terraform apply
   destroy:
     working_directory: /terraform
     executor: docker-executor 
     steps:
       - checkout
+      - aws-cli/setup:
+          profile-name: default
       - attach_workspace:
           at: .
       - run:
            name: terraform destroy
            command: |
             cd terraform
+            echo 2323
             terraform destroy -auto-approve
 
 workflows:
@@ -68,9 +74,11 @@ workflows:
             requires:
               - init-plan
         - apply:
+            context: AWScreds
             requires:
               - hold
         - destroy:
+            context: AWScreds
             requires:
               - hold
 
