--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,8 +38,8 @@ jobs:
     working_directory: /terraform
     executor: docker-executor 
     steps:
-      - aws-cli/setup:
-          profile-name: default
+      # - aws-cli/setup:
+      #     profile-name: default
       # - attach_workspace:
       #     at: .
       - run:
@@ -51,8 +51,8 @@ jobs:
     working_directory: /terraform
     executor: docker-executor 
     steps:
-      - aws-cli/setup:
-          profile-name: default
+      # - aws-cli/setup:
+      #     profile-name: default
       # - attach_workspace:
       #     at: .
       - run:
