--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
             terraform plan -input=false
             terraform plan -out tf.plan
   apply:
-    working_directory: /terraform
+    working_directory: ~/project/terraform
     executor: docker-executor 
     steps:
       - checkout
@@ -49,7 +49,7 @@ jobs:
             echo 2323
             terraform apply
   destroy:
-    working_directory: /terraform
+    working_directory: ~/project/terraform
     executor: docker-executor 
     steps:
       - checkout
