--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,12 @@
 version: 2.1
 orbs: 
   aws-cli: circleci/aws-cli@3.1.1
+  terraform: circleci/terraform@3.0.1
 executors:
   docker-executor:
     docker:
       - image: cimg/python:3.9.6
+
 jobs:
   init-plan:
     working_directory: ~/project/terraform
@@ -17,22 +19,40 @@ jobs:
           name: Check aws version
           command: |
             aws --version
-      - run:
-          name: Install Terraform
-          command: |
-            sudo apt-get update && sudo apt-get install -y gnupg software-properties-common curl
-            curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
-            sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
-            sudo apt-get update && sudo apt-get install terraform
-      - attach_workspace:
-          at: .
-      - run:
-          name: terraform init plan fmt
-          command: |
-            cd terraform
-            terraform init -input=false
-            terraform fmt .
-            terraform plan -out tfplan
+      - terraform/init:
+          checkout: true
+          context: terraform
+      - terraform/fmt:
+          checkout: true
+          context: terraform
+      - terraform/validate:
+          checkout: true
+          context: terraform
+          requires:
+            - terraform/fmt
+      - terraform/plan:
+          checkout: true
+          context: terraform
+          persist-workspace: true
+          requires:
+            - terraform/validate
+
+      # - run:
+      #     # name: Install Terraform
+      #     # command: |
+      #     #   sudo apt-get update && sudo apt-get install -y gnupg software-properties-common curl
+      #     #   curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
+      #     #   sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
+      #     #   sudo apt-get update && sudo apt-get install terraform
+      # - attach_workspace:
+      #     at: .
+      # # - run:
+      # #     name: terraform init plan fmt
+      # #     command: |
+      # #       cd terraform
+      # #       terraform init -input=false
+      # #       terraform fmt .
+      # #       terraform plan -out tfplan
       - persist_to_workspace:
           root: .
           paths:
@@ -46,13 +66,16 @@ jobs:
           profile-name: default
       - attach_workspace:
           at: ~/project/terraform
-      - run:
-           name: terraform apply
-           command: |
-            ls -al
-            cd terraform
-            ls -al
-            terraform apply
+      - terraform/apply:
+          attach-workspace: true
+          context: terraform
+      # - run:
+      #      name: terraform apply
+      #      command: |
+      #       ls -al
+      #       cd terraform
+      #       ls -al
+      #       terraform apply
       - persist_to_workspace:
            root: .
            paths:
@@ -66,15 +89,18 @@ jobs:
           profile-name: default
       - attach_workspace:
           at: ~/project/terraform
-      - run:
-           name: terraform destroy
-           command: |
-            cd terraform
-            terraform destroy -auto-approve
-      - persist_to_workspace:
-           root: .
-           paths:
-              - .
+      - terraform/destroy:
+          attach-workspace: true
+          context: terraform
+      # - run:
+      #      name: terraform destroy
+      #      command: |
+      #       cd terraform
+      #       terraform destroy -auto-approve
+      # - persist_to_workspace:
+      #      root: .
+      #      paths:
+      #         - .
 workflows:
     deploy:
       jobs:
