Josh - add autoapprove and tfplan to apply

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,7 @@ jobs:
             ls -al
             cd terraform
             ls -al
-            terraform apply
+            terraform apply -auto-approve tfplan
       - persist_to_workspace:
            root: .
            paths:
