--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,96 +1,65 @@
 version: 2.1
-orbs: 
+orbs:
   aws-cli: circleci/aws-cli@3.1.1
   terraform: circleci/terraform@3.0.1
-executors:
-  docker-executor:
-    docker:
-      - image: cimg/python:3.9.6
-
 jobs:
   init-plan:
     working_directory: ~/project/terraform
-    executor: docker-executor 
+    executor: terraform/default
     steps:
       - checkout
       - aws-cli/setup:
           profile-name: default
-      - run:
-          name: Check aws version
-          command: |
-            aws --version
-      - run:
-          name: Install Terraform
-          command: |
-            sudo apt-get update && sudo apt-get install -y gnupg software-properties-common curl
-            curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
-            sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
-            sudo apt-get update && sudo apt-get install terraform
-      - attach_workspace:
-          at: .
-      - run:
-          name: terraform init plan fmt
-          command: |
-            cd terraform
-            terraform init -input=false
-            terraform fmt .
-            terraform plan -out tfplan
+      - terraform/install:
+          arch: amd64
+          os: linux
+          terraform_version: 1.1.9
+      - terraform/fmt:
+          path: .
+      - terraform/validate:
+          path: .
+      - terraform/init:
+          backend: true
+          backend_config_file: terraform.tfstate
+          path: .
+      - terraform/plan:
+          backend_config_file: terraform.tfstate
+          path: .
       - persist_to_workspace:
           root: .
           paths:
             - .
   apply:
     working_directory: ~/project/terraform
-    executor: docker-executor 
+    executor: terraform/default
     steps:
       - checkout
       - aws-cli/setup:
           profile-name: default
       - attach_workspace:
           at: ~/project/terraform
-      - run:
-          name: Install Terraform
-          command: |
-            sudo apt-get update && sudo apt-get install -y gnupg software-properties-common curl
-            curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
-            sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
-            sudo apt-get update && sudo apt-get install terraform
-      - run:
-           name: terraform apply
-           command: |
-            ls -al
-            cd terraform
-            ls -al
-            terraform apply -auto-approve tfplan
-      - persist_to_workspace:
-           root: .
-           paths:
-              - .
+      - terraform/install:
+          arch: amd64
+          os: linux
+          terraform_version: 1.1.9
+      - terraform/apply:
+          backend_config_file: terraform.tfstate
+          path: .
   destroy:
     working_directory: ~/project/terraform
-    executor: docker-executor 
+    executor: terraform/default
     steps:
       - checkout
       - aws-cli/setup:
           profile-name: default
       - attach_workspace:
           at: ~/project/terraform
-      - run:
-          name: Install Terraform
-          command: |
-            sudo apt-get update && sudo apt-get install -y gnupg software-properties-common curl
-            curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
-            sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
-            sudo apt-get update && sudo apt-get install terraform
-      - run:
-           name: terraform destroy
-           command: |
-            cd terraform
-            terraform destroy -auto-approve
-      - persist_to_workspace:
-           root: .
-           paths:
-              - .
+      - terraform/install:
+          arch: amd64
+          os: linux
+          terraform_version: 1.1.9
+      - terraform/destroy:
+          path: .
 workflows:
     deploy:
       jobs:
@@ -108,5 +77,3 @@ workflows:
             context: AWScreds
             requires:
               - apply
-
-      
