--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       - terraform/install:
           arch: amd64
           os: linux
-          terraform_version: 0.14.2
+          terraform_version: "0.14.2"
       - terraform/fmt:
           path: .
       - terraform/validate:
@@ -41,7 +41,7 @@ jobs:
       - terraform/install:
           arch: amd64
           os: linux
-          terraform_version: 0.14.2
+          terraform_version: "0.14.2"
       - terraform/apply:
           backend_config_file: terraform.tfstate
           path: .
@@ -57,7 +57,7 @@ jobs:
       - terraform/install:
           arch: amd64
           os: linux
-          terraform_version: 0.14.2
+          terraform_version: "0.14.2"
       - terraform/destroy:
           path: .
 workflows:
