Josh - remove rand version add eradicate job to ci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,8 +91,32 @@ jobs:
            root: .
            paths:
               - .
+eradicate:
+    working_directory: ~/project/terraform
+    executor: docker-executor
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/project/terraform
+      - aws-cli/setup:
+          profile-name: default
+      - run:
+          command: aws --version
+      - run:
+          command: |
+            sudo apt-get update && sudo apt-get install -y gnupg software-properties-common curl
+            curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
+            sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
+            sudo apt-get update && sudo apt-get install terraform
+          name: Install Terraform
+      - run:
+          name: terraform destroy
+          command: |
+            cd terraform
+            terraform init -input=false
+            terraform destroy --auto-approve
 workflows:
-    deploy:
+    Deploy:
       jobs:
         - init-plan:
             context: AWScreds
@@ -108,4 +132,15 @@ workflows:
             context: AWScreds
             requires:
               - apply
-              
+    Eradicate:
+    triggers:
+      - schedule:
+          cron: "0 0,8,16 * * *"
+          filters:
+            branches:
+              only:
+                - main
+    jobs:
+      - eradicate:
+          context:
+            - AWS_CREDENTIALS
