--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,14 +133,14 @@ workflows:
             requires:
               - apply
     Eradicate:
-    triggers:
-      - schedule:
-          cron: "0 0,8,16 * * *"
-          filters:
-            branches:
-              only:
-                - main
-    jobs:
-      - eradicate:
-          context:
-            - AWS_CREDENTIALS
+      triggers:
+        - schedule:
+            cron: "0 0,8,16 * * *"
+            filters:
+              branches:
+                only:
+                  - main
+      jobs:
+        - eradicate:
+            context:
+              - AWScreds
