--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -136,6 +136,10 @@ workflows:
       triggers:
         - schedule:
             cron: "0 0,8,16 * * *"
+            filters:
+              branches:
+                only:
+                  - main
       jobs:
         - eradicate:
             context:
