Josh - comment out versions. edit ci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,7 +139,7 @@ workflows:
             filters:
               branches:
                 only:
-                  - main
+                  - trunk
       jobs:
         - eradicate:
             context:
