Josh - edit ci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -118,6 +118,8 @@ jobs:
 workflows:
     Eradicate:
       jobs:
+         - init-plan:
+            context: AWScreds
         - eradicate:
             context:
               - AWScreds
@@ -137,3 +139,15 @@ workflows:
             context: AWScreds
             requires:
               - apply
+      # Eradicate:
+      # triggers:
+      #   - schedule:
+      #       cron: "0 0,8,16 * * *"
+      #       filters:
+      #         branches:
+      #           only:
+      #             - trunk
+      # jobs:
+      #   - eradicate:
+      #       context:
+      #         - AWScreds
