--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,145 +2,69 @@ version: 2.1
 orbs: 
   aws-cli: circleci/aws-cli@3.1.1
   terraform: circleci/terraform@3.0.1
-executors:
-  docker-executor:
-    docker:
-      - image: cimg/python:3.9.6
+  maven: circleci/maven@1.4.0
 
 jobs:
-  init-plan-aws:
-    working_directory: ~/project/terraform
-    executor: docker-executor 
+  build:
+    docker:
+      - image: cimg/openjdk:11.0.18
+    ###### Image details ######
+    # build-essential 12.9ubuntu3, curl 7.81.0, docker 20.10.22, docker-compose Docker Compose version v2.14.2 v2.14.2, 
+    # dockerize v0.8.0, git 2.39.1, gradle 7.6, java 11.0.18, jq 1.6, maven 3.8.7, ubuntu 22.04.1 LTS, wget 1.21.2
+    steps:
+      - run: echo "Build"
+
+  stage: &setup-env
+    docker:
+      - image: cimg/openjdk:11.0.18
+    working_directory: ~/terraform
     steps:
       - checkout
+      - setup_remote_docker
+      - run: echo "Stage"
       - aws-cli/setup:
-          profile-name: default
-      - run:
-          name: Check aws version
-          command: |
-            aws --version
-      - run:
-          name: Install Terraform
-          command: |
-            sudo apt-get update && sudo apt-get install -y gnupg software-properties-common curl
-            curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
-            sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
-            sudo apt-get update && sudo apt-get install terraform
-      - attach_workspace:
-          at: .
-      - run:
-          name: terraform init plan fmt
-          command: |
-            cd terraform
-            terraform init -upgrade -input=false
-            terraform fmt .
-            terraform plan -out tfplan
-      - persist_to_workspace:
-          root: .
-          paths:
-            - .
-  apply:
-    working_directory: ~/project/terraform
-    executor: docker-executor 
+           profile-name: default
+      - run: aws --version
+      - run: bash ./scripts/install_terraform.sh
+      - run: bash ./scripts/initplan.sh
+      - run: bash ./scripts/install_dependencies.sh
+      - run: echo "Staged successfully"      
+
+  deploy: &deploy-env
+    docker:
+      - image: cimg/openjdk:11.0.18
+    working_directory: ~/terraform
     steps:
       - checkout
+      - setup_remote_docker
+      - run: echo "Deploy"
       - aws-cli/setup:
-          profile-name: default
-      - attach_workspace:
-          at: ~/project/terraform
-      - run:
-          name: Install Terraform
-          command: |
-            sudo apt-get update && sudo apt-get install -y gnupg software-properties-common curl
-            curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
-            sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
-            sudo apt-get update && sudo apt-get install terraform
-      - run:
-           name: terraform apply
-           command: |
-            ls -al
-            cd terraform
-            ls -al
-            terraform apply -auto-approve tfplan
-      - persist_to_workspace:
-           root: .
-           paths:
-              - .
-  destroy:
-    working_directory: ~/project/terraform
-    executor: docker-executor 
-    steps:
-      - checkout
-      - aws-cli/setup:
-          profile-name: default
-      - attach_workspace:
-          at: ~/project/terraform
-      - run:
-          name: Install Terraform
-          command: |
-            sudo apt-get update && sudo apt-get install -y gnupg software-properties-common curl
-            curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
-            sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
-            sudo apt-get update && sudo apt-get install terraform
-      - run:
-           name: terraform destroy
-           command: |
-            cd terraform
-            terraform destroy -auto-approve
-      - persist_to_workspace:
-           root: .
-           paths:
-              - .
-  clean-aws:
-    working_directory: ~/project/terraform
-    executor: docker-executor
-    steps:
-      - checkout
-      - attach_workspace:
-          at: ~/project/terraform
-      - aws-cli/setup:
-          profile-name: default
-      - run:
-          command: aws --version
-      - run:
-          command: |
-            sudo apt-get update && sudo apt-get install -y gnupg software-properties-common curl
-            curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
-            sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
-            sudo apt-get update && sudo apt-get install terraform
-          name: Install Terraform
-      - run:
-          name: terraform destroy
-          command: |
-            cd terraform
-            terraform init -upgrade -input=false
-            terraform destroy --auto-approve
+           profile-name: default
+      - run: aws --version
+      - run: bash ./scripts/install_terraform.sh
+      - run: bash ./scripts/apply.sh
+      - run: bash ./scripts/install_dependencies.sh
+      - run: echo "Deployed successfully"    
+
+  stage_env:
+    <<: *setup-env
+
+  deploy_env:
+    <<: *deploy-env
+
+  
+
 workflows:
-    Deploy:
-      jobs:
-        - init-plan-aws:
-            context: AWScreds
-        - apply approval:
-            type: approval
-            requires:
-              - init-plan-aws
-        - apply:
-            context: AWScreds
-            requires:
-              - apply approval
-        # - destroy:
-        #     context: AWScreds
-        #     requires:
-        #       - hold
-    clean-aws:
-      triggers:
-       - schedule:
-          cron: "0 0,4,8,12,16,20 * * *"
-          filters:
-            branches:
-              only:
-                - trunk
-      jobs:
-        - clean-aws:
-            context:
-              - AWScreds
+  build-env:
+    jobs:
+    - build
+    - stage_env:
+        context: ***   
+    - apply approval:
+        type: approval
+        requires:
+        - stage_env
+    - deploy_env:
+        context: ***
+        requires: 
+         - apply approval
